Carosello e fix navbar overlap

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -21,7 +21,7 @@
     .hamburger {
         margin-left: auto;
         display: flex;
-        width: 30px;
+        align-items: flex-end;
         height: 40px;
         cursor: pointer;
         flex-direction: column;
